name:                codingame-hs
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/chatanga/codingame-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Florent Lioult
maintainer:          florent@hihan.org
copyright:           2017 Florent Lioult
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Codingame.SourcePackager Codingame.WebServices
  other-modules:       Codingame.Debug
  build-depends:       base,
                       HTTP,
                       aeson,
                       attoparsec,
                       bytestring,
                       containers,
                       filepath,
                       haskell-src-exts,
                       http-client,
                       http-client-tls,
                       http-types,
                       mtl,
                       text
  default-language:    Haskell2010

test-suite codingame-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base,
                       codingame-hs,
                       haskell-src-exts,
                       HUnit,
                       test-framework,
                       test-framework-hunit
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chatanga/codingame-hs
