name:           codingame-hs
version:        0.1.0
cabal-version:  >=1.10
build-type:     Simple
license:        MIT
license-file:   LICENSE
homepage:       https://github.com/Chatanga/codingame-hs#readme
author:         Florent Lioult
maintainer:     florent@hihan.org
copyright:      2016 Florent Lioult
category:       Game
synopsis:       A simple library to play with the Codingame site.

source-repository head
    type: git
    location: https://github.com/Chatanga/codingame-hs

library
  hs-source-dirs:      src
  exposed-modules:     Codingame.SourcePackager Codingame.WebServices
  other-modules:       Codingame.Debug
  build-depends:       base >=4.7 && <5,
                       HTTP,
                       aeson,
                       attoparsec,
                       bytestring,
                       containers,
                       filepath,
                       haskell-src-exts,
                       http-client,
                       http-client-tls,
                       http-types,
                       mtl,
                       text
  default-language:    Haskell2010

test-suite codingame-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base,
                       codingame-hs,
                       haskell-src-exts,
                       HUnit,
                       test-framework,
                       test-framework-hunit
  default-language:    Haskell2010

